--- a/docker/segment-anything/cpu/Dockerfile
+++ b/docker/segment-anything/cpu/Dockerfile
@@ -2,26 +2,29 @@ ARG BASE_IMAGE=python:3.10
 ARG MODEL_CHECKPOINT
 ARG MODEL_TYPE
 ARG DEVICE_TYPE=cpu
-ARG CUDA_VERSION=none
-# replace opencv-pytho with opencv-python-headless
+# python
+# already
+# opencv: replace opencv-python with opencv-python-headless
 ARG OPENCV_INSTALL=opencv-python-headless pycocotools matplotlib onnxruntime onnx
-# default use cpu
+# pytorch: default use cpu
 ARG PYTORCH_INSTALL=torch==2.1.2 torchvision==0.16.2 --index-url https://download.pytorch.org/whl/cpu
 
 
+# Stage 1: Download model
 FROM alpine:3.18 as download
 ARG MODEL_CHECKPOINT
 RUN mkdir -p /usr/src && wget -q -O /usr/src/${MODEL_CHECKPOINT}.pth https://dl.fbaipublicfiles.com/segment_anything/${MODEL_CHECKPOINT}.pth
 
 
+# Stage 2: Install sam
 FROM ${BASE_IMAGE}
 ARG MODEL_CHECKPOINT
 ARG MODEL_TYPE
 ARG DEVICE_TYPE
+
 ARG OPENCV_INSTALL
 ARG PYTORCH_INSTALL
 
-### Segment-Anything ###
 COPY segment-anything /usr/src/segment-anything
 COPY --from=download /usr/src/${MODEL_CHECKPOINT}.pth /usr/src/segment-anything/
 WORKDIR /usr/src/segment-anything
