--- a/.github/workflows/sam-cuda-docker.yml
+++ b/.github/workflows/sam-cuda-docker.yml
@@ -27,6 +27,8 @@ jobs:
             MODEL_TYPE: vit_l
           - MODEL: sam_vit_b_01ec64
             MODEL_TYPE: vit_b
+
+          # PyTorch ARM binaries do not support CUDA
           # no arm64 wheels on https://download.pytorch.org
           - BASE_IMAGE: nvidia/cuda:12.1.0-base-ubuntu20.04
             DEVICE: cuda
